// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea renders custom props 1`] = `
<textarea
  className="form__input"
  id="idTest"
  maxLength={255}
  minLength={3}
  name="nameTest"
  onChange={[Function]}
  placeholder="placeholderTest"
  required={false}
  title=""
  value=""
/>
`;

exports[`TextArea renders defaultProps 1`] = `
<textarea
  className="form__input"
  id=""
  maxLength={255}
  minLength={3}
  name=""
  onChange={[Function]}
  placeholder=""
  required={false}
  title=""
  value=""
/>
`;
